MNT-20634 fixed styling for rule description word wrapping FF/Chrome/IE11

--- a/share/src/main/webapp/components/rules/rule-details.css
+++ b/share/src/main/webapp/components/rules/rule-details.css
@@ -3,9 +3,11 @@
    margin-top:2.7em;
 }
 
+/* MNT-20634 word-wrap fix valid for FF/Chrome/IE11 */
 .rule-details .display
 {
    padding: 1em;
+   word-wrap: break-word;
 }
 
 .rule-details h2
